day7/talium-production/06-postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: talium
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
