day7/talium-production/08-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: talium
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
