day7/talium-production/11-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talium-ingress
  namespace: talium
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: talium.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: talium-api
                port:
                  number: 80
